[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mco"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "Mork Calling Orson."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["organizer", "console"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/ShazbotLabs/mco"

[project.scripts]
mco = "mco.main:app"
